[workspace]
members = [
    "raydium_amm",
    # "spl_token",
    # "pumpfun",
    # "system_program",
    # "mpl_token_metadata",
]
resolver = "2"

[workspace.package]
version = "0.1.5"
edition = "2021"

[workspace.dependencies]
substreams = "^0.6.1"
substreams-solana = "0.14.1"
substreams-solana-utils = { git = "https://github.com/pinax-network/substreams-solana-utils", branch = "main" }
prost = "0.13"
bs58 = "0.5.1"
borsh = { version = "1.5.7", features = ["derive"] }
lazy_static = "1.5.0"
anyhow = "1.0.98"
thiserror = "1.0.63"
bincode = "1.3.3"
base64 = "0.22.1"
serde = { version = "1.0.197", features = ["derive"] }
arrayref = "0.3.8"
safe-transmute = "0.11.3"
bytemuck = "1.23.0"
regex = "1.11.1"
num-derive = "0.4.2"
num-traits = "0.2.19"

[profile.release]
lto = true
opt-level = 's'
strip = "debuginfo"
